<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/field_input"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/putih_pudar"
        android:textSize="20sp" />
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:text="@string/submit"
        android:textAllCaps="false"/>

    <EditText
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/field_output"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/putih_pudar"
        android:textSize="20sp" />
    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/output"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:text="@string/reset"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/textView"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/guide_1"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textView3"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/guide_2"
        android:textSize="15sp"/>

</RelativeLayout>